almost finished project

--- a/rawdata/champion_stats1995.html
+++ b/rawdata/champion_stats1995.html
@@ -207,7 +207,7 @@ googletag.cmd.push(function() { googletag.display('sr_bbr_300x250_atf1'); });
 googletag.cmd.push(function() { googletag.display('sr_bbr_728x90_atf1'); });
 </script>
 </div></div><div id="sponsor_no" class="sponsor_no">
-  <p><strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_HOU_1995">Sponsor</a></strong> this page for $75 and help Basketball-Reference.com provide this service.  Your message will replace this ad.</p>
+  <p>Our primary support comes from users like you. <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_HOU_1995">Sponsor</a></strong> this page for $75.  Your message will replace this ad.</p>
 </div>
 </div>
 
