--- a/rawdata/champion_stats1998.html
+++ b/rawdata/champion_stats1998.html
@@ -208,7 +208,7 @@ googletag.cmd.push(function() { googletag.display('sr_bbr_300x250_atf1'); });
 googletag.cmd.push(function() { googletag.display('sr_bbr_728x90_atf1'); });
 </script>
 </div></div><div id="sponsor_no" class="sponsor_no">
-  <p><strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_CHI_1998">Sponsor</a></strong> this page for $125 and help Basketball-Reference.com provide this service.  Your message will replace this ad.</p>
+  <p>Let people know you like this site. <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_CHI_1998">Sponsor</a></strong> this page for $125.  Your message will replace this ad.</p>
 </div>
 </div>
 
