--- a/rawdata/champion_stats2012.html
+++ b/rawdata/champion_stats2012.html
@@ -188,7 +188,7 @@ googletag.cmd.push(function() { googletag.display('sr_bbr_300x250_atf1'); });
 googletag.cmd.push(function() { googletag.display('sr_bbr_728x90_atf1'); });
 </script>
 </div></div><div id="sponsor_no" class="sponsor_no">
-  <p>Like this page? <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_MIA_2012">Sponsor</a></strong> it for $60.  Your message will replace this ad.</p>
+  <p>Promote your website or business by <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_MIA_2012">sponsoring</a></strong> this page for $60 on Basketball-Reference.com.  Your message will replace this ad.</p>
 </div>
 </div>
 
