--- a/rawdata/champion_stats1996.html
+++ b/rawdata/champion_stats1996.html
@@ -208,7 +208,7 @@ googletag.cmd.push(function() { googletag.display('sr_bbr_300x250_atf1'); });
 googletag.cmd.push(function() { googletag.display('sr_bbr_728x90_atf1'); });
 </script>
 </div></div><div id="sponsor_no" class="sponsor_no">
-  <p>Like this page? <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_CHI_1996">Sponsor</a></strong> it for $235.  Your message will replace this ad.</p>
+  <p>Let people know you like this site. <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_CHI_1996">Sponsor</a></strong> this page for $235.  Your message will replace this ad.</p>
 </div>
 </div>
 
