--- a/rawdata/champion_stats1999.html
+++ b/rawdata/champion_stats1999.html
@@ -207,7 +207,7 @@ googletag.cmd.push(function() { googletag.display('sr_bbr_300x250_atf1'); });
 googletag.cmd.push(function() { googletag.display('sr_bbr_728x90_atf1'); });
 </script>
 </div></div><div id="sponsor_no" class="sponsor_no">
-  <p>Our primary support comes from users like you. <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_SAS_1999">Sponsor</a></strong> this page for $55.  Your message will replace this ad.</p>
+  <p>Let people know you like this site. <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_SAS_1999">Sponsor</a></strong> this page for $55.  Your message will replace this ad.</p>
 </div>
 </div>
 
