--- a/rawdata/champion_stats2000.html
+++ b/rawdata/champion_stats2000.html
@@ -226,7 +226,7 @@ googletag.cmd.push(function() { googletag.display('sr_bbr_300x250_atf1'); });
 googletag.cmd.push(function() { googletag.display('sr_bbr_728x90_atf1'); });
 </script>
 </div></div><div id="sponsor_no" class="sponsor_no">
-  <p>Our primary support comes from users like you. <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_LAL_2000">Sponsor</a></strong> this page for $100.  Your message will replace this ad.</p>
+  <p><strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_LAL_2000">Sponsor</a></strong> this page for $100 and help Basketball-Reference.com provide this service.  Your message will replace this ad.</p>
 </div>
 </div>
 
