--- a/rawdata/champion_stats2001.html
+++ b/rawdata/champion_stats2001.html
@@ -228,7 +228,7 @@ googletag.cmd.push(function() { googletag.display('sr_bbr_300x250_atf1'); });
 googletag.cmd.push(function() { googletag.display('sr_bbr_728x90_atf1'); });
 </script>
 </div></div><div id="sponsor_no" class="sponsor_no">
-  <p>Let people know you like this site. <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_LAL_2001">Sponsor</a></strong> this page for $165.  Your message will replace this ad.</p>
+  <p>Promote your website or business by <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_LAL_2001">sponsoring</a></strong> this page for $165 on Basketball-Reference.com.  Your message will replace this ad.</p>
 </div>
 </div>
 
