--- a/rawdata/champion_stats2002.html
+++ b/rawdata/champion_stats2002.html
@@ -228,7 +228,7 @@ googletag.cmd.push(function() { googletag.display('sr_bbr_300x250_atf1'); });
 googletag.cmd.push(function() { googletag.display('sr_bbr_728x90_atf1'); });
 </script>
 </div></div><div id="sponsor_no" class="sponsor_no">
-  <p><strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_LAL_2002">Sponsor</a></strong> this page for $80 and help Basketball-Reference.com provide this service.  Your message will replace this ad.</p>
+  <p>Like this page? <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_LAL_2002">Sponsor</a></strong> it for $80.  Your message will replace this ad.</p>
 </div>
 </div>
 
