--- a/rawdata/champion_stats2006.html
+++ b/rawdata/champion_stats2006.html
@@ -188,7 +188,7 @@ googletag.cmd.push(function() { googletag.display('sr_bbr_300x250_atf1'); });
 googletag.cmd.push(function() { googletag.display('sr_bbr_728x90_atf1'); });
 </script>
 </div></div><div id="sponsor_no" class="sponsor_no">
-  <p>Our primary support comes from users like you. <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_MIA_2006">Sponsor</a></strong> this page for $130.  Your message will replace this ad.</p>
+  <p>Promote your website or business by <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_MIA_2006">sponsoring</a></strong> this page for $130 on Basketball-Reference.com.  Your message will replace this ad.</p>
 </div>
 </div>
 
