--- a/rawdata/champion_stats2008.html
+++ b/rawdata/champion_stats2008.html
@@ -230,7 +230,7 @@ googletag.cmd.push(function() { googletag.display('sr_bbr_300x250_atf1'); });
 googletag.cmd.push(function() { googletag.display('sr_bbr_728x90_atf1'); });
 </script>
 </div></div><div id="sponsor_no" class="sponsor_no">
-  <p>Promote your website or business by <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_BOS_2008">sponsoring</a></strong> this page for $135 on Basketball-Reference.com.  Your message will replace this ad.</p>
+  <p>Let people know you like this site. <strong><a href="/my/auth.cgi?do=sponsor&ID=bbr_BOS_2008">Sponsor</a></strong> this page for $135.  Your message will replace this ad.</p>
 </div>
 </div>
 
